# learn-langchain

./: .gitignore  README.md  pyproject.toml
src/: build_simple_llm_application.py  config.py
