[tool.poetry]
name = "learn-langchain"
version = "0.1.0"
description = "learn langchain"
authors = ["Toby <ahwt.ll@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.7"
langchain-openai = "^0.2.9"
httpx = "^0.27.2"
httpx-sse = "^0.4.0"
pyjwt = "^2.10.0"
langchain-community = "^0.3.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
